Ensure drug name doesn’t wrap

--- a/app/assets/stylesheets/renalware/modules/medications.css.scss
+++ b/app/assets/stylesheets/renalware/modules/medications.css.scss
@@ -52,3 +52,7 @@
 dl.medication-history {
   left: 0.9em;
 }
+
+#medications .name {
+  white-space: nowrap;
+}
